# hatch-sbom

./: LICENSE  README.md  hatch_build.py  pyproject.toml
.github/: renovate.json
.github/workflows/: cd-publish-test.yml  cd-publish.yml  ci-lint.yml  ci-test.yml
src/hatch_sbom/: hooks.py  plugin.py
tests/: test_hooks.py  test_integration.py  test_plugin.py
