[build-system]
requires = ["hatchling>=1.28.0, <2.0.0", "hatch-vcs>=0.4.0", "uv>=0.11.8"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "hatch-sbom"
description = "Hatchling build hook plugin for generating Software Bill of Materials (SBOM)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
maintainers = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
keywords = ["hatch", "hatchling", "sbom", "cyclonedx", "build-hook"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Hatch",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = ["hatchling>=1.28.0, <2.0.0"]

[project.optional-dependencies]
cdx = ["cyclonedx-bom>=7.3.0, <8.0.0"]
pdm = ["pdm>=2.26.8, <3.0.0"]
uv = ["uv>=0.11.8"]

[project.urls]
"Source Code" = "https://github.com/Ichunjo/hatch-sbom"
"Bug Tracker" = "https://github.com/Ichunjo/hatch-sbom/issues"

[project.entry-points.hatch]
sbom = "hatch_sbom.hooks"

[dependency-groups]
dev = [
    "mypy>=1.20.2, <1.21.0",
    "ruff>=0.15.12, <0.16.0",
    { include-group = "test" },
]
test = [
    "build>=1.4.4, <2.0.0",
    "pytest>=9.0.3, <10.0.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1, <4.0.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
source = "uv"

[tool.hatch.build.targets.wheel.hooks.custom.uv]
no-dev = true

[tool.mypy]
exclude_gitignore = true

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition_new = true
local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "YTT",
    "ASYNC",
    "C4",
    "LOG",
    "G",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "I",
    "N",
    "PERF",
    "E",
    "W",
    "UP",
    "FURB",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"__init__.*" = ["F401", "F403"]

[tool.coverage.run]
omit = ["hatch_build.py"]
